--- a/CppSingle/.vscode/tasks.json
+++ b/CppSingle/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {//这个大括号里是‘构建（build）’任务
             "label": "build", //任务名称，可以更改，不过不建议改
             "type": "shell", //任务类型，process是vsc把预定义变量和转义解析后直接全部传给command；shell相当于先打开shell再输入命令，所以args还会经过shell再解析一遍
-            "command": "gcc", //编译命令，这里是gcc，编译c++的话换成g++
+            "command": "g++", //编译命令，这里是gcc，编译c++的话换成g++
             "args": [    //方括号里是传给gcc命令的一系列参数，用于实现一些功能
                 "${file}", //指定要编译的是当前文件
                 "-o", //指定输出文件的路径和名称
@@ -13,7 +13,7 @@
                 "-Wall", // 开启额外警告
                 "-static-libgcc",  // 静态链接libgcc
                 "-fexec-charset=GBK", // 生成的程序使用GBK编码，不加这一条会导致Win下输出中文乱码
-                "-std=c11", // 语言标准，可根据自己的需要进行修改，写c++要换成c++的语言标准，比如c++11
+                "-std=c++11", // 语言标准，可根据自己的需要进行修改，写c++要换成c++的语言标准，比如c++11
             ],
             "group": {  //group表示‘组’，我们可以有很多的task，然后把他们放在一个‘组’里
                 "kind": "build",//表示这一组任务类型是构建
