--- a/CppSingle/exercise/.vscode/tasks.json
+++ b/CppSingle/exercise/.vscode/tasks.json
@@ -4,6 +4,7 @@
             "type": "cppbuild",
             "label": "C/C++: gcc.exe 生成活动文件",
             "command": "C:\\Program Files\\mingw64\\bin\\gcc.exe",
+            "args":[
                 "-fdiagnostics-color=always",
                 "-g",
                 "${file}",
